src/tui/view/ui/snapshots/sbom_tools__tui__view__ui__render_snapshot_tests__view_tree_filter_bookmarked_empty_80x24.snap
---
source: src/tui/view/ui/render_snapshot_tests.rs
expression: text
---
sbom-tools  VIEW  │ acme-webapp │ CycloneDX 1.5 │ [SBOM]

« [2] Components  │ [3] Dependencies  │ [4] Licenses  │ [5] Vulnerabilities  »

────────────────────────────────────────────────────────────────────────────────
Group:  Ecosystem   Filter:  Bookmarked  (0)┌ Component Overview ──────────────┐
                                            │Component Statistics              │
┌ Components (0/9) ────────────────────────┐│                                  │
│┌────────────────────────────────────────┐││Total Components: 9               │
││                                        │││                                  │
││                    ∅                   │││By Type:                          │
││                                        │││Libraries       8 88% ██████      │
││ No components match filter 'Bookmarked'│││Applications    1 11%             │
││                                        │││                                  │
││       Press [f] to change filter       │││Vulnerability Status:             │
││                                        │││Critical        1 11%             │
││                                        │││High            1 11%             │
││                                        │││Medium          0  0%             │
││                                        │││Low             0  0%             │
││                                        │││Clean           7 77% ██████      │
│└────────────────────────────────────────┘││                                  │
└──────────────────────────────────────────┘└──────────────────────────────────┘
 Components: 9 │ Vulns: 2 (1C/1H) │ Licenses: 2 │ Group:  Ecosystem  Filter:  Bo
     p panel  Enter select │  Tab switch  / filter  e export  ? help  q quit
