src/tui/view/ui/snapshots/sbom_tools__tui__view__ui__render_snapshot_tests__view_vuln_compact_80x24.snap
---
source: src/tui/view/ui/render_snapshot_tests.rs
expression: text
---
sbom-tools  VIEW  │ SBOM │ CycloneDX  │ [SBOM]

« [5] Vulnerabilities  │ [6] Quality  │ [7] Compliance  │ [8] Source

────────────────────────────────────────────────────────────────────────────────
┌──────────────────────────┐┌ Top Affected ────────────────────────────────────┐
│ Critical  6 vulns        ││crit-0           3 ██████████████████████████████ │
│                          ││crit-1           2 ████████████████████░░░░░░░░░░ │
└──────────────────────────┘└──────────────────────────────────────────────────┘
⚡  KEV 1 [K] · Fixable 1 · EPSS≥10% 1
Filter:  All  KEV:  Off  Sort:  Severity  Dedupe:  On  Group:  Component
[f] filter [K] kev [s] sort [d] dedupe [g] group [E/C] fold [}/{] group jump
┌ Vulnerabilities (1 of 6 Critical) ───────┐┌ Group Details ───────────────────┐
│ Vuln ID              CV F CWE            ││crit-0  (3 vulnerabilities)       │
│▶├─▶ crit-0 (3)       9.                  ││  Max CVSS: 9.8                   │
│ ├─▶ crit-1 (2)       9.                  ││                                  │
│ └─▶ crit-2 (1)       9.                  ││CVEs (3):                         │
│                                          ││ C   9.8 CVE-2024-2000 KEV        │
│                                          ││ C   9.7 CVE-2024-2001            │
│                                          ││ C   9.6 CVE-2024-2002            │
│                                          ││                                  │
└──────────────────────────────────────────┘└──────────────────────────────────┘
 Components: 3 │ Vulns: 6 (6C/0H) │ Licenses: 0
  …  f filter │  Tab switch  / search  e export  ? help  q quit [y] copy crit-0
