src/tui/view/ui/snapshots/sbom_tools__tui__view__ui__render_snapshot_tests__view_vuln_triage_120x40.snap
---
source: src/tui/view/ui/render_snapshot_tests.rs
expression: text
---
sbom-tools  VIEW  │ SBOM │ CycloneDX  │ [SBOM]

[1] Overview  │ [2] Components  │ [3] Vulns  │ [4] Licenses  │ [5] Deps  │ [6] Quality  │ [7] Compliance  │ [8] Source

────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────
┌────────────────────────────┐┌────────────────────────────┐┌────────────────────────────┐┌────────────────────────────┐
│          CRITICAL          ││            HIGH            ││           MEDIUM           ││             LOW            │
│              1             ││              1             ││              0             ││              0             │
│ █████████████░░░░░░░░░░░░░ ││ █████████████░░░░░░░░░░░░░ ││ ░░░░░░░░░░░░░░░░░░░░░░░░░░ ││ ░░░░░░░░░░░░░░░░░░░░░░░░░░ │
└────────────────────────────┘└────────────────────────────┘└────────────────────────────┘└────────────────────────────┘
⚡  KEV 1 [k] · Fixable 1 · EPSS≥10% 1
Filter:  All  KEV:  Off  Sort:  Severity  Dedupe:  On  Group:  Component
[f] filter [k] kev [s] sort [d] dedupe [g] group [E/C] fold [Tab] next group
┌ Vulnerabilities (1 of 2) ──────────────────────────────────────┐┌ Group Details ─────────────────────────────────────┐
│     Vuln ID                Fix            CWE                  ││kev-lib  (1 vulnerabilities)                        │
│▶    ├─▶ kev-lib (1)                                            ││                                                    │
│     └─▶ fix-lib (1)                                            ││CVEs (1):                                           │
│                                                                ││ C       CVE-2024-0001 KEV                          │
│                                                                ││                                                    │
│                                                                ││                                                    │
│                                                                ││                                                    │
│                                                                ││                                                    │
│                                                                ││                                                    │
│                                                                ││                                                    │
│                                                                ││                                                    │
│                                                                ││                                                    │
│                                                                ││                                                    │
│                                                                ││                                                    │
│                                                                ││                                                    │
│                                                                ││                                                    │
│                                                                ││                                                    │
│                                                                ││                                                    │
│                                                                ││                                                    │
│                                                                ││                                                    │
│                                                                ││                                                    │
│                                                                ││                                                    │
│                                                                ││                                                    │
└────────────────────────────────────────────────────────────────┘└────────────────────────────────────────────────────┘
 Components: 2 │ Vulns: 2 (1C/1H) │ Licenses: 1
     …  f filter  s sort  g group  d dedup │  Tab switch  / search  e export  ? help  q quit [y] copy CVE-2024-0001
