src/tui/view/ui/snapshots/sbom_tools__tui__view__ui__render_snapshot_tests__view_vulnerabilities_80x24.snap
---
source: src/tui/view/ui/render_snapshot_tests.rs
expression: text
---
sbom-tools  VIEW  │ acme-webapp │ CycloneDX 1.5 │ [SBOM]

« [5] Vulnerabilities  │ [6] Quality  │ [7] Compliance  │ [8] Source

────────────────────────────────────────────────────────────────────────────────
┌──────────────────┐┌──────────────────┐┌──────────────────┐┌──────────────────┐
│     CRITICAL     ││       HIGH       ││      MEDIUM      ││        LOW       │
│         1        ││         1        ││         0        ││         0        │
└──────────────────┘└──────────────────┘└──────────────────┘└──────────────────┘
⚡  KEV 0 [K] · Fixable 0 · EPSS≥10% 0
Filter:  All  KEV:  Off  Sort:  Severity  Dedupe:  On  Group:  Component
[f] filter [K] kev [s] sort [d] dedupe [g] group [E/C] fold [}/{] group jump
┌ Vulnerabilities (1 of 2) ────────────────┐┌ Group Details ───────────────────┐
│  Vuln ID              CVS CWE            ││axios  (1 vulnerability)          │
│▶ ├─▶ axios (1)        9.8                ││  Max CVSS: 9.8                   │
│  └─▶ express (1)      8.1                ││                                  │
│                                          ││CVEs (1):                         │
│                                          ││ C   9.8 CVE-2023-45857           │
│                                          ││    Axios SSRF vulnerability ...  │
│                                          ││                                  │
│                                          ││                                  │
└──────────────────────────────────────────┘└──────────────────────────────────┘
 Components: 9 │ Vulns: 2 (1C/1H) │ Licenses: 2
  …  f filter │  Tab switch  / search  e export  ? help  q quit [y] copy axios
